Custom camera/movement

--- a/default.project.json
+++ b/default.project.json
@@ -46,6 +46,10 @@
       "StarterPlayerScripts": {
         "$className": "StarterPlayerScripts",
 
+        "PlayerScriptsLoader": {
+          "$className": "LocalScript"
+        },
+
         "Client": {
           "$path": "src/client"
         }
