Add Rodux dependency

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "modules/roact"]
 	path = modules/roact
 	url = https://github.com/Roblox/roact
+[submodule "modules/rodux"]
+	path = modules/rodux
+	url = https://github.com/Roblox/rodux
