Add Roact-Rodux dependency

--- a/default.project.json
+++ b/default.project.json
@@ -40,6 +40,9 @@
         },
         "Rodux": {
           "$path": "modules/rodux/lib"
+        },
+        "RoactRodux": {
+          "$path": "modules/roact-rodux/lib"
         }
       }
     },
