--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "modules/rodux"]
 	path = modules/rodux
 	url = https://github.com/Roblox/rodux
+[submodule "modules/roact-rodux"]
+	path = modules/roact-rodux
+	url = https://github.com/Roblox/roact-rodux
