Tidy up lighting

--- a/default.project.json
+++ b/default.project.json
@@ -15,8 +15,17 @@
         "OutdoorAmbient": [0, 0, 0],
         "Outlines": false,
         "GlobalShadows": true,
-        "Technology": "Voxel",
-        "Brightness": 1.0
+        "Technology": {
+          "Type": "Enum",
+          "Value": 3
+        },
+        "ShadowSoftness": {
+          "Type": "Float32",
+          "Value": 0
+        },
+        "TimeOfDay": "12:00:00",
+        "GeographicLatitude": "20",
+        "Brightness": 1.0,
       },
       "Skybox": {
         "$path": "Skybox.rbxmx"
