Upgrade to latest Rojo master, which has a new reflection database

--- a/default.project.json
+++ b/default.project.json
@@ -16,10 +16,7 @@
         "Outlines": false,
         "GlobalShadows": true,
         "Technology": "Voxel",
-        "ShadowSoftness": {
-          "Type": "Float32",
-          "Value": 0
-        },
+        "ShadowSoftness": 0,
         "TimeOfDay": "12:00:00",
         "GeographicLatitude": 20,
         "Brightness": 0.5
