Fix t dep and .gitignore

--- a/default.project.json
+++ b/default.project.json
@@ -36,7 +36,7 @@
       "Modules": {
         "$className": "Folder",
         "t": {
-          "$path": "modules/t/lib/t.lua"
+          "$path": "modules/t/lib/"
         },
         "Roact": {
           "$path": "modules/roact/src"
